--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.ts"></script>
+    <div id="app"></div>
+    <script src="./App.tsx"></script>
 </body>
 </html>
