--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="./App.tsx"></script>
+    <script src="./App.jsx"></script>
 </body>
 </html>
