--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="./App.jsx"></script>
+    <input id="input"></input>
+    <script src="./index.ts"></script>
 </body>
 </html>
